--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.11",
     "gray-matter": "^4.0.2",
     "marked": "^0.8.2",
     "next": "9.3.1",
